crates/djls-semantic/tests/snapshots/corpus__repos__horizon__openstack_dashboard__templatetags__context_selection.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "openstack_dashboard.templatetags.context_selection::tag::iframe_embed_settings":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: keep
  "openstack_dashboard.templatetags.context_selection::tag::is_multi_region":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "openstack_dashboard.templatetags.context_selection::tag::is_multidomain":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "openstack_dashboard.templatetags.context_selection::tag::show_domain_list":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: keep
  "openstack_dashboard.templatetags.context_selection::tag::show_overview":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: keep
  "openstack_dashboard.templatetags.context_selection::tag::show_project_list":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: keep
  "openstack_dashboard.templatetags.context_selection::tag::show_region_list":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: keep
  "openstack_dashboard.templatetags.context_selection::tag::show_system_list":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: keep
  "openstack_dashboard.templatetags.context_selection::tag::show_systems":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
filter_arities: {}
block_specs: {}
