crates/djls-semantic/tests/snapshots/corpus__repos__horizon__openstack_dashboard__templatetags__themes.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "openstack_dashboard.templatetags.themes::tag::current_theme":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "openstack_dashboard.templatetags.themes::tag::themable_asset":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: asset
        required: true
        kind: Variable
        position: 0
    as_var: strip
  "openstack_dashboard.templatetags.themes::tag::theme_cookie":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "openstack_dashboard.templatetags.themes::tag::theme_dir":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "openstack_dashboard.templatetags.themes::tag::themes":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
filter_arities: {}
block_specs: {}
